# wd-mycloud-rsync-recovery

./: .gitignore  .pre-commit-config.yaml  Brewfile  README.md  monitor.sh  preflight.py  pyproject.toml  pytest.ini  requirements.txt  rsync_dryrun.out  rsync_restore.py  run_tests.sh  setup.sh
.github/workflows/: ci.yml
docs/: DATABASE_SCHEMA.md  INSTALLATION.md  USAGE_GUIDE.md
scripts/: analyze_orphans.py  debug_contentid.py  diagnose_paths.py  install-hooks.sh
tests/: conftest.py  test_cleanup.py  test_cleanup_integration.py  test_database_integration.py  test_error_handling.py  test_farm_rsync_integration.py  test_path_reconstruction.py  test_preflight.py  test_preflight_integration.py  test_progress_monitoring.py  test_rsync_commands.py  test_rsync_restore.py  test_symlink_farm.py  test_user_interaction.py
